fix github markdown rendering

--- a/03. Байесовская теория решений. Решающие правила на основе максимума апостериорной вероятности и функции правдоподобия..md
+++ b/03. Байесовская теория решений. Решающие правила на основе максимума апостериорной вероятности и функции правдоподобия..md
@@ -43,18 +43,15 @@ $$
 
 Или для отношений правдоподобия:
 
-$$
-\omega_i : l_{ij}(x) = \frac{p(x / \omega_i)}{p(x / \omega_j)} 
+$$\omega_i : l_{ij}(x) = \frac{p(x / \omega_i)}{p(x / \omega_j)} 
 \underset{\omega_2}{\overset{\omega_1}{\gtrless}} l_{ij}=
-\frac{p(\omega_j)}{p(\omega_i)}, \quad j = \overline{1, M}, \quad i \ne j. \qquad (4b)
-$$
+\frac{p(\omega_j)}{p(\omega_i)}, \quad j = \overline{1, M}, \quad i \ne j. \qquad (4b)$$
 
 Для двух классов:
-$$
-l(x) = \frac{p(x / \omega_1)}{p(x / \omega_2)} 
+
+$$l(x) = \frac{p(x / \omega_1)}{p(x / \omega_2)} 
 \underset{\omega_2}{\overset{\omega_1}{\gtrless}} 
-\frac{p(\omega_2)}{p(\omega_1)} = l_0. (5)
-$$
+\frac{p(\omega_2)}{p(\omega_1)} = l_0. (5)$$
 
 
 Особенность МАВ: отказ от обоснования штрафных функций, порог зависит только от априорных вероятностей, требуется меньше информации по сравнению с МУР.
@@ -62,22 +59,20 @@ $$
 ### Критерий максимального правдоподобия (МП)
 Еще один частный случай: в дополнение к отсутствию обоснованных штрафных функций, априорные вероятности одинаковы $p(\omega_i) = 1/M$, $i = \overline{1, M}$ или неизвестны.
 Решающие правила (4) преобразуются:
-$$
-\omega_i: p(x/\omega_i) \ge p(x/\omega_j), \quad j = \overline{1, M}, \quad i \ne j, \qquad (6a)
-$$
+
+$$\omega_i: p(x/\omega_i) \ge p(x/\omega_j), \quad j = \overline{1, M}, \quad i \ne j, \qquad (6a)$$
+
 Или:
-$$
-\omega_i: l_{ij}(x) = \frac{p(x/\omega_i)}{p(x/\omega_j)} 
+
+$$\omega_i: l_{ij}(x) = \frac{p(x/\omega_i)}{p(x/\omega_j)} 
 \underset{\omega_2}{\overset{\omega_1}{\gtrless}} l_{ij}\equiv
-1, \quad j = \overline{1, M}, \quad i \ne j. \qquad (6b)
-$$
+1, \quad j = \overline{1, M}, \quad i \ne j. \qquad (6b)$$
+
 Для двух классов:
 
-$$
-l(x) = \frac{p(x / \omega_1)}{p(x / \omega_2)} 
+$$l(x) = \frac{p(x / \omega_1)}{p(x / \omega_2)} 
 \underset{\omega_2}{\overset{\omega_1}{\gtrless}} 
-l_0 \equiv 1
-$$
+l_0 \equiv 1$$
 
 
 Алгоритмы МП реализуют минимальный объем исходной информации, необходимой для синтеза алгоритма распознавания.
