--- a/03. Байесовская теория решений. Решающие правила на основе максимума апостериорной вероятности и функции правдоподобия..md
+++ b/03. Байесовская теория решений. Решающие правила на основе максимума апостериорной вероятности и функции правдоподобия..md
@@ -13,9 +13,7 @@
 $$p(\omega_i / x) = \frac{p(x / \omega_i) p(\omega_i)}{p(x)}, \quad i = \overline{1,M}, \quad p(x) = \sum_{i=1}^{M} p(x / \omega_i) p(\omega_i)= \sum_{i=1}^{M} p(x , \omega_i)$$
 
 ## Задача: 
-для каждого $x$ принять решение $\alpha(x) \in A = \{\alpha_i, i = \overline{1,M}\}$, разбивая пространство на области $\Gamma_i$, где $\alpha_i = \alpha(x) : x \in \Gamma_i \rightarrow \omega_i$.
-
-## Синтез решающих правил
+для каждого $x$ принять решение $\alpha(x) \in A = \{\alpha_i, i = \overline{1,M}\}$, разбивая пространство на области решений $\Gamma_i$, где $\alpha_i = \alpha(x) : x \in \Gamma_i \rightarrow \omega_i$.
 
 ### Критерий максимума апостериорной вероятности (МАВ)
 
@@ -38,20 +36,20 @@ $$
 Байесовское решающее правило для многих классов — система неравенств для апостериорных вероятностей:
 
 $$
-\omega_i : p(\omega_i / x) \ge p(\omega_j / x), \quad j = \overline{1, M}, \quad i \ne j \qquad (4a)
+\omega_i : p(\omega_i / x) \ge p(\omega_j / x), \quad j = \overline{1, M}, \quad i \ne j \qquad (1)
 $$
 
 Или для отношений правдоподобия:
 
 $$\omega_i : l_{ij}(x) = \frac{p(x / \omega_i)}{p(x / \omega_j)} 
 \underset{\omega_2}{\overset{\omega_1}{\gtrless}} l_{ij}=
-\frac{p(\omega_j)}{p(\omega_i)}, \quad j = \overline{1, M}, \quad i \ne j. \qquad (4b)$$
+\frac{p(\omega_j)}{p(\omega_i)}, \quad j = \overline{1, M}, \quad i \ne j. \qquad (2)$$
 
 Для двух классов:
 
 $$l(x) = \frac{p(x / \omega_1)}{p(x / \omega_2)} 
 \underset{\omega_2}{\overset{\omega_1}{\gtrless}} 
-\frac{p(\omega_2)}{p(\omega_1)} = l_0. (5)$$
+\frac{p(\omega_2)}{p(\omega_1)} = l_0. (3)$$
 
 
 Особенность МАВ: отказ от обоснования штрафных функций, порог зависит только от априорных вероятностей, требуется меньше информации по сравнению с МУР.
@@ -60,13 +58,13 @@ $$l(x) = \frac{p(x / \omega_1)}{p(x / \omega_2)}
 Еще один частный случай: в дополнение к отсутствию обоснованных штрафных функций, априорные вероятности одинаковы $p(\omega_i) = 1/M$, $i = \overline{1, M}$ или неизвестны.
 Решающие правила (4) преобразуются:
 
-$$\omega_i: p(x/\omega_i) \ge p(x/\omega_j), \quad j = \overline{1, M}, \quad i \ne j, \qquad (6a)$$
+$$\omega_i: p(x/\omega_i) \ge p(x/\omega_j), \quad j = \overline{1, M}, \quad i \ne j, \qquad (4)$$
 
 Или:
 
 $$\omega_i: l_{ij}(x) = \frac{p(x/\omega_i)}{p(x/\omega_j)} 
 \underset{\omega_2}{\overset{\omega_1}{\gtrless}} l_{ij}\equiv
-1, \quad j = \overline{1, M}, \quad i \ne j. \qquad (6b)$$
+1, \quad j = \overline{1, M}, \quad i \ne j. \qquad (5)$$
 
 Для двух классов:
 
