Update 04. Понятие разделяющей функции. Обобщенная структура решающего правила. Оценка ошибок..md

--- a/04. Понятие разделяющей функции. Обобщенная структура решающего правила. Оценка ошибок..md
+++ b/04. Понятие разделяющей функции. Обобщенная структура решающего правила. Оценка ошибок..md
@@ -3,73 +3,47 @@
 Исходя из результатов синтеза алгоритмов, обобщенная структура байесовского классификатора определяется канонической формой представления с использованием разделяющих функций.
 
 Разделяющие функции — набор функций $g_i(x), i = \overline{1,M}$, на основе которых определяется соответствие вектора признаков одному из классов по правилу:
-$$
-\omega_i : g_i(x) \ge g_j(x), \quad j = \overline{1, M}, \quad i \neq j,
-$$
+$$\omega_i : g_i(x) \ge g_j(x), \quad j = \overline{1, M}, \quad i \neq j,$$
 т.е. отнесение образа к классу на основе максимума среди значений разделяющих функций.
 ![[Pasted image 20260115235651.png]]
 В схеме отображается сущность решающих правил: решение формируется как индекс класса с максимальным значением разделяющей функции. Для трех вариантов алгоритмов (МУР, МАВ, МП) разделяющие функции:
-$$
-g_i(x) = \begin{cases} -r(\alpha_i / x), & \text{для МУР} \\ p(\omega_i / x); p(\omega_i) p(x / \omega_i), & \text{для МАВ} \\ p(x / \omega_i), & \text{для МП} \end{cases} \quad i = \overline{1,M}.
-$$
+$$g_i(x) = \begin{cases} -r(\alpha_i / x), & \text{для МУР} \\ p(\omega_i / x); p(\omega_i) p(x / \omega_i), & \text{для МАВ} \\ p(x / \omega_i), & \text{для МП} \end{cases} \quad i = \overline{1,M}.$$
 Если $g_i(x), i = \overline{1,M}$ — разделяющие функции, то любая монотонно возрастающая функция $g'(x) = f(g(x))$ дает эквивалентное правило для $g_i'(x), i = \overline{1,M}$.
 
 Удобно использовать натуральный логарифм: $g_i'(x) = \ln(g_i(x)), i = \overline{1,M}$, — произведения и степени преобразуются в суммы.
 
 Для двух классов обобщенное правило:
-$$
-g_1(x) \underset{\omega_2}{\overset{\omega_1}{\gtrless}} g_2(x), \quad \text{эквивалентно } g(x) = g_1(x) - g_2(x) \underset{\omega_2}{\overset{\omega_1}{\gtrless}} 0.
-$$
+$$g_1(x) \underset{\omega_2}{\overset{\omega_1}{\gtrless}} g_2(x), \quad \text{эквивалентно } g(x) = g_1(x) - g_2(x) \underset{\omega_2}{\overset{\omega_1}{\gtrless}} 0.$$
 Классификатор двух классов — алгоритм, вычисляющий единственную разделяющую функцию. Граница между $\Gamma_1, \Gamma_2$ — уравнение $g_1(x) - g_2(x) = 0$.
 
 Для МАВ разделяющая функция:
-$$
-g(x) = p(\omega_1/x) - p(\omega_2/x)
-$$
+$$g(x) = p(\omega_1/x) - p(\omega_2/x)$$
 или эквивалентно:
-$$
-g'(x) = \ln p(\omega_1/x) - \ln p(\omega_2/x) = \ln \frac{p(x/\omega_1)}{p(x/\omega_2)} + \ln \frac{p(\omega_1)}{p(\omega_2)}.
-$$
+$$g'(x) = \ln p(\omega_1/x) - \ln p(\omega_2/x) = \ln \frac{p(x/\omega_1)}{p(x/\omega_2)} + \ln \frac{p(\omega_1)}{p(\omega_2)}.$$
 Для общей формы двух гипотез:
-$$
-l(x) = \frac{p(x/\omega_1)}{p(x/\omega_2)} \underset{\omega_2}{\overset{\omega_1}{\gtrless}} = l_0,
-$$
+$$l(x) = \frac{p(x/\omega_1)}{p(x/\omega_2)} \underset{\omega_2}{\overset{\omega_1}{\gtrless}} = l_0,$$
 где $l_0$– порог, задаваемый для каждого из алгоритмов МУР, МАВ, МП, логарифмирование выполняется и для порога. Т.е. общий вид алгоритма классификации и уравнение для границы классов в пространстве признаков будет иметь вид
-$$
-g'(x) \underset{\omega_2}{\overset{\omega_1}{\gtrless}} l_0' , \quad g'(x) = \ln l(x) = \ln \frac{p(x/\omega_1)}{p(x/\omega_2)}, \quad l_0' = \ln l_0, \quad g'(x) - l_0' = 0.
-$$
+$$g'(x) \underset{\omega_2}{\overset{\omega_1}{\gtrless}} l_0' , \quad g'(x) = \ln l(x) = \ln \frac{p(x/\omega_1)}{p(x/\omega_2)}, \quad l_0' = \ln l_0, \quad g'(x) - l_0' = 0.$$
 
 ### Анализ решающих правил. Оценка вероятностей ошибок распознавания
 Анализ синтезированных алгоритмов включает оценку ожидаемых потерь и ошибок, вид разделяющих функций (линейные/нелинейные), формы областей $\Gamma ^{(i)}, i = \overline{1,M}$.
 
 Базовые показатели: вероятности правильного распознавания $P_c^{(i)}$ и ошибки $\varepsilon_{er}^{(i)},  i = \overline{1,M}$:
-$$
-P_c^{(i)} = 1 - \varepsilon_{er}^{(i)} = \int_{\Gamma_i} p(x / \omega_i) dx, \quad \varepsilon_{er}^{(i)} =  \int_{\overline\Gamma_j} p(x / \omega_i) dx, \quad i = \overline{1, M}. \quad (7)
-$$
+$$P_c^{(i)} = 1 - \varepsilon_{er}^{(i)} = \int_{\Gamma_i} p(x / \omega_i) dx, \quad \varepsilon_{er}^{(i)} =  \int_{\overline\Gamma_j} p(x / \omega_i) dx, \quad i = \overline{1, M}. \quad (7)$$
 Общая суммарная ошибка:
-$$
-E_s = \sum_{i=1}^{M} p(\omega_i) \varepsilon_{er}^{(i)} = 1 - \sum_{i=1}^{M} p(\omega_i) P_c^{(i)}.
-$$
+$$E_s = \sum_{i=1}^{M} p(\omega_i) \varepsilon_{er}^{(i)} = 1 - \sum_{i=1}^{M} p(\omega_i) P_c^{(i)}.$$
 Матрица ошибок распознавания:
-$$
-M_{er} = \|\varepsilon_{ij}\| , \quad \varepsilon_{ij} = \int_{\Gamma_j} p(x / \omega_i) dx, \quad \sum_{j=1, j \neq i}^{M} \varepsilon_{ij} = \varepsilon_{er}^{(i)}, \quad \varepsilon_{ii} = P_c^{(i)} = 1 - \sum_{j=1, j \neq i}^{M} \varepsilon_{ij}.
-$$
+$$M_{er} = \|\varepsilon_{ij}\| , \quad \varepsilon_{ij} = \int_{\Gamma_j} p(x / \omega_i) dx, \quad \sum_{j=1, j \neq i}^{M} \varepsilon_{ij} = \varepsilon_{er}^{(i)}, \quad \varepsilon_{ii} = P_c^{(i)} = 1 - \sum_{j=1, j \neq i}^{M} \varepsilon_{ij}.$$
 Для двух классов: ошибки первого ($\alpha$) и второго ($\beta$) рода:
-$$
-\alpha = \int_{\Gamma_2} p(x / \omega_1) dx, \quad \beta = \int_{\Gamma_1} p(x / \omega_2) dx. \quad (8)
-$$
+$$\alpha = \int_{\Gamma_2} p(x / \omega_1) dx, \quad \beta = \int_{\Gamma_1} p(x / \omega_2) dx. \quad (8)$$
 ![[Pasted image 20260116005100.png]]
 ![[Pasted image 20260116005117.png]]
 
 Для МУР вероятности ошибок пересчитываются в потери:
-$$
-R = \sum_{i=1}^{M} \sum_{j=1}^{M} \lambda(\alpha_i / \omega_j) p(\omega_j) \int_{\Gamma_i} p(x / \omega_j) dx = \sum_{i=1}^{M} \sum_{j=1}^{M} \lambda(\alpha_i / \omega_j) \varepsilon_{ji} p(\omega_j).
-$$
+$$R = \sum_{i=1}^{M} \sum_{j=1}^{M} \lambda(\alpha_i / \omega_j) p(\omega_j) \int_{\Gamma_i} p(x / \omega_j) dx = \sum_{i=1}^{M} \sum_{j=1}^{M} \lambda(\alpha_i / \omega_j) \varepsilon_{ji} p(\omega_j).$$
 Для симметричной функции потерь:
 
-$$
-R = \sum_{i=1}^{M} \int_{\Gamma_i} [1 - p(\omega_i / x)] p(x) dx = 1 - \sum_{i=1}^{M} p(\omega_i) \int_{\Gamma_i} p(x / \omega_i) dx = 1 - \sum_{i=1}^{M} p(\omega_i) P_c^{(i)} = E_s.
-$$
+$$R = \sum_{i=1}^{M} \int_{\Gamma_i} [1 - p(\omega_i / x)] p(x) dx = 1 - \sum_{i=1}^{M} p(\omega_i) \int_{\Gamma_i} p(x / \omega_i) dx = 1 - \sum_{i=1}^{M} p(\omega_i) P_c^{(i)} = E_s.$$
 
 МАВ минимизирует $E_s$ (критерий идеального наблюдателя).
 
