Update 04. Понятие разделяющей функции. Обобщенная структура решающего правила. Оценка ошибок..md

--- a/04. Понятие разделяющей функции. Обобщенная структура решающего правила. Оценка ошибок..md
+++ b/04. Понятие разделяющей функции. Обобщенная структура решающего правила. Оценка ошибок..md
@@ -53,41 +53,25 @@ $$R = \sum_{i=1}^{M} \int_{\Gamma_i} [1 - p(\omega_i / x)] p(x) dx = 1 - \sum_{i
 **Первый способ:** Прямое интегрирование $p(x/\omega_i)$ по $\Gamma_i$ (затруднительно для $n>1$).
 
 **Второй способ:** Анализ одномерных распределений разделяющих функций $p(g_i/\omega_j)$, с приближениями (гауссово для $p(g'/\omega_i)$, $g'(x)=\ln l(x)$). Для двух классов:
-$$
-\alpha = \int_{-\infty}^{l_0'} p(g'/\omega_1)dg', \quad \beta = \int_{l_0'}^{\infty} p(g'/\omega_2)dg'.
-$$
+$$\alpha = \int_{-\infty}^{l_0'} p(g'/\omega_1)dg', \quad \beta = \int_{l_0'}^{\infty} p(g'/\omega_2)dg'.$$
 
 **Третий способ:** Принцип гарантированного результата, верхние границы (граница Чернова). Для двух классов:
-$$
-E_s = p(\omega_1)\alpha + p(\omega_2)\beta \le p(\omega_1)^{1-t} p(\omega_2)^t \exp(-\mu(t)), \quad \mu(t) = -\ln \int p(x / \omega_1)^{1-t} p(x / \omega_2)^t dx,
-$$
+$$E_s = p(\omega_1)\alpha + p(\omega_2)\beta \le p(\omega_1)^{1-t} p(\omega_2)^t \exp(-\mu(t)), \quad \mu(t) = -\ln \int p(x / \omega_1)^{1-t} p(x / \omega_2)^t dx,$$
 оптимальное $t$ – скалярная величина, лежащая в интервале от нуля до единицы:
-$$
--\frac{d\mu(t)}{dt} = \ln \frac{p(\omega_1)}{p(\omega_2)}.
-$$
+$$-\frac{d\mu(t)}{dt} = \ln \frac{p(\omega_1)}{p(\omega_2)}.$$
 $\mu(1/2)$ — расстояние Бхатачария.
 
 Для многих классов:
-$$
-E_s < \sum_{j=1}^{M} \sum_{i>j}^{M} E_{s_{ij}},
-$$
+$$E_s < \sum_{j=1}^{M} \sum_{i>j}^{M} E_{s_{ij}},$$
 где $E_{s_{ij}}$ — границы для попарного распознавания.
 
 **Четвертый способ:** Статистическое имитационное моделирование: подсчет ошибок по $K$ реализациям. Доверительные интервалы:
-$$
-P\left[|P_c^{(i)} - \tilde{P}_c^{(i)}| < d_g\right] = 1 - \gamma,
-$$
+$$P\left[|P_c^{(i)} - \tilde{P}_c^{(i)}| < d_g\right] = 1 - \gamma,$$
 где $d_g$ – доверительный интервал; $\gamma$ – уровень значимости. Конечное уравнение, связывающее $d_g$  и K, имеет вид
-$$
-d_g = t_{kp}(\gamma)\sqrt{P_c^{(i)}(1-P_c^{(i)})/K}, \quad K = \frac{t_{kp}^2(\gamma)P_c^{(i)}(1-P_c^{(i)})}{d_g^2}, \quad 2\Phi(t_{kp}(\gamma)) - 1 = 1 - \gamma,
-$$
-$$
-t_{kp}(\gamma) = \Phi^{-1}((2-\gamma)/2), \quad \Phi(t) = \frac{1}{\sqrt{2\pi}} \int_{-\infty}^{t} e^{-\frac{x^2}{2}} dx.
-$$
+$$d_g = t_{kp}(\gamma)\sqrt{P_c^{(i)}(1-P_c^{(i)})/K}, \quad K = \frac{t_{kp}^2(\gamma)P_c^{(i)}(1-P_c^{(i)})}{d_g^2}, \quad 2\Phi(t_{kp}(\gamma)) - 1 = 1 - \gamma,$$
+$$t_{kp}(\gamma) = \Phi^{-1}((2-\gamma)/2), \quad \Phi(t) = \frac{1}{\sqrt{2\pi}} \int_{-\infty}^{t} e^{-\frac{x^2}{2}} dx.$$
 Для гарантии заменить $P_c^{(i)}(1-P_c^{(i)})$ на $0.25$:
-$$
-d_g \geq \frac{t_{kp}(\gamma)}{2\sqrt{K}}, \quad K \geq \frac{t_{kp}^2(\gamma)}{4d_g^2}.
-$$
+$$d_g \geq \frac{t_{kp}(\gamma)}{2\sqrt{K}}, \quad K \geq \frac{t_{kp}^2(\gamma)}{4d_g^2}.$$
 Таблица 1. Рекомендуемые объемы статистических испытаний (для $\gamma = 0.05$, $t_{kp}=1.96$)
 
 | Значения оцениваемой вероятности ошибки $(1 - P_c^{(i)})$ | Количество испытаний K $(d_g = 0.25(1 - P_c^{(i)}))$ | Количество испытаний K $(d_g = 0.1(1 - P_c^{(i)}))$ |
