--- a/02. Байесовская теория решений. Решающее правило на основе минимума условного риска.md
+++ b/02. Байесовская теория решений. Решающее правило на основе минимума условного риска.md
@@ -15,7 +15,7 @@ $$p(x / \omega_i) = f_x(x / \omega_i), \quad i = 1,\dots,M$$
 
 $$p(\omega_i / x) = \frac{p(x / \omega_i) \, p(\omega_i)}{p(x)}, \quad i = 1,\dots,M$$
 
-$$p(x) = \sum_{i=1}^M p(x / \omega_i) \, p(\omega_i) = \sum_{i=1}^M p(x, \omega_i)$$
+$$p(x) = \sum_{i=1}^M p(x / \omega_i) p(\omega_i) = \sum_{i=1}^M p(x, \omega_i)$$
 
 **Решаемая задача состоит в том, чтобы для каждого образа** _x_ **выполнить действие – решение $\alpha(x)$, относящие его к тому или иному классу.**
 $$\alpha(x) \in A = \{\alpha_i, \, i = 1,\dots,M\}$$
