--- a/02. Байесовская теория решений. Решающее правило на основе минимума условного риска.md
+++ b/02. Байесовская теория решений. Решающее правило на основе минимума условного риска.md
@@ -33,12 +33,12 @@ $$\alpha(x) \in A = \{\alpha_i, \, i = 1,\dots,M\}$$
 
 Функция **условного риска**:
 
-$$r(\alpha_i / x) = \sum_{j=1}^M \lambda(\alpha_i / \omega_j) \, p(\omega_j / x), \quad i = 1,\dots,M$$
+$$r(\alpha_i / x) = \sum_{j=1}^M \lambda(\alpha_i / \omega_j) p(\omega_j / x), \quad i = 1,\dots,M$$
 
 ФУР определяют суммарные потери за принятие решения $\alpha_i$ при получении данных _x_.
 **Общий ожидаемый риск**:
 
-$$R = \int r(\alpha(x) / x) \, p(x) \, dx = \sum_{i=1}^M \int_{\Gamma_i} r(\alpha_i / x) \, p(x) \, dx = \sum_{i=1}^M \sum_{j=1}^M  \int_{\Gamma_i} \lambda(\alpha_i / \omega_j)p(\omega_j, x) \, dx$$
+$$R = \int r(\alpha(x) / x) p(x) dx = \sum_{i=1}^M \int_{\Gamma_i} r(\alpha_i / x) p(x) dx = \sum_{i=1}^M \sum_{j=1}^M  \int_{\Gamma_i} \lambda(\alpha_i / \omega_j)p(\omega_j, x) dx$$
 
 Минимизация $R$ достигается минимизацией условного риска для каждого $x$:
 
